@@ -3,6 +3,10 @@ $Id$
 
 ****************************** DRUPAL 7 - 2.x BRANCH ********************************
 
+January 23, 2011
+----------------
+#1021826 by troky: Relpy button doesn't work - missing comment form if "Show reply form on the same page as comments" set.
+
 January 21, 2011
 ----------------
 NOISSUE by Michelle: Minor template changes to keep all three modules in synch. Synced to commit #479936
